@@ -59,12 +59,8 @@ Typo3_Bootstrap::initializeTypo3DbGlobal(TRUE);
 
 Typo3_Bootstrap_Cli::initializeCliKeyOrDie();
 
-	// Include standard tables.php or own file
-if (TYPO3_tables_script) {
-	include(PATH_typo3conf . TYPO3_tables_script);
-} else {
-	include(PATH_t3lib . 'stddb/tables.php');
-}
+	// Include standard tables.php file
+include(PATH_t3lib . 'stddb/tables.php');
 	// Load temp_CACHED file of ext_tables or each ext_tables.php of loaded extensions
 if ($TYPO3_LOADED_EXT['_CACHEFILE']) {
 	include(PATH_typo3conf . $TYPO3_LOADED_EXT['_CACHEFILE'] . '_ext_tables.php');
